--- a/dashboard.html
+++ b/dashboard.html
@@ -40,6 +40,7 @@
                     </div>
                     <div class="profile-actions">
                         <button id="editProfileBtn" class="btn btn-primary">Modifier le profil</button>
+                        <a href="lists.html" class="btn btn-primary">Voir mes listes</a>
                         <button id="deleteAccountBtn" class="btn btn-danger">Supprimer le compte</button>
                     </div>
                 </div>
